# mcp-servers

./: .claude_code_config.json  .env.template  .eslintrc.js  .gitattributes  .gitignore  .gitmodules  .last_adguard_dry_run.json  .mcp-services.json  .mcp.json  .pre-commit-config.yaml  .projecthub-mcp-registration.json  AUTOMATED-DOCUMENTATION-EXPLAINED.md  BIRDNET_GONE_DEPLOYMENT_COMPLETE.md  C:\GIT\mcp-3d-printer-server\.env.fixed  C:\GIT\mcp-3d-printer-server\configure_printer.ps1  C:\GIT\mcp-3d-printer-server\configure_slicer.ps1  C:\GIT\mcp-3d-printer-server\validate_config.ps1  CHANGELOG.md  CLAUDE.md  Claude_Auto_Commit_MCP_Server_API_Reference.md  Claude_Auto_Commit_MCP_Server_WikiJS_Page.md  DEPLOYMENT-v1.1.0.md  DEPLOYMENT.md  DEVELOPMENT.md  DEVELOPMENT_OVERVIEW.md  Directory_Polling_MCP_Server_Fix_Documentation.md  ESP32S3_PDM_FIRMWARE_FIX_COMPLETE.md  GITHUB_RUNNER_LXC_README.md  GITHUB_SECRETS_DOCUMENTATION.md  GitHub_MCP_Project_Board_Phase2_Implementation.md  GitHub_MCP_Project_Board_Support.md  GitHub_MCP_Projects_v2_Implementation_Summary.md  HA_API_TOKEN_DOCUMENTATION.md  HOMEASSISTANT_MCP_TROUBLESHOOTING.md  HOME_ASSISTANT_OVERVIEW.md  HOME_ASSISTANT_OVERVIEW_CLEAN.md  INFRASTRUCTURE_OVERVIEW.md  MCP-Documentation-Summary.md  MCP-Server-Best-Practices.md  MCP-Server-ENOENT-Fix-Documentation.md  (+129 more)
.beads/: issues.jsonl
.claude/: PROJECT_INDEX.md  settings.json
.githooks/: post-merge
.github/: PUSH_TEST.md
.mcp/: README.md  backup-manager.py  batch-processor.py  conflict-resolver.py  setup-mcp-servers.sh  template-applicator.py  template-schema.json
.prompts/: PROMPTS_OVERVIEW.md  README.md  STANDARDIZATION_GUIDE.md
.serena/: project.yml
GHrunner/: prompt-01-architecture-design.md  prompt-02-installation-guide.md  prompt-04-configuration-management.md  prompt-05-monitoring-system.md  prompt-07-management-scripts.md  prompt-09-maintenance-procedures.md  prompt-10-integration-testing.md  prompt-12-backup-recovery.md
api/: MCP_INTEGRATION.md  MCP_INTEGRATION_WIKI.md  config-loader.js  csv-export.js  email-notifications.js  github-mcp-manager.js  jest.config.js  mcp-connector.js  package-lock.json  package.json  phase2-endpoints.js  serena-orchestrator.js  server-mcp.js  server-v2.js  server.js  websocket-server.js  wiki-agent-manager.js
audit-history/: latest.json
backup-configs-20250630-1122/: code-linter-wrapper.sh  github-wrapper.sh  hass-mcp-wrapper.sh  hass-wrapper.sh  network-mcp-wrapper.sh  proxmox-mcp-wrapper.sh  proxmox-wrapper.sh  serena-mcp-wrapper.sh  wikijs-mcp-wrapper.sh
backup_phase4_customer_integration_20250707_142629/: CUSTOMER_INTEGRATION_GUIDE.md  CUSTOMER_PACKAGE_SUMMARY.md  appliance_notification_phase4.yaml  appliance_notification_phase4_sensors.yaml  customer_appliance_notification_dashboard.yaml  reliable_appliance_notifications_integration.yaml
backup_phase4_customer_integration_20250707_143429/: README.txt
claude-auto-commit-mcp-server/: README.md  build.sh  config.example.json  package-lock.json  package.json  test-auth.js  test-integration.js  tsconfig.json
code-linter-mcp-server/: INSTALL.md  MCP_LIBRARY_BUG_REPORT.md  README.md  SETUP_INSTRUCTIONS.md  code-linter-mcp-server  config.json  example_config.json  install.bat  install.bat.backup  install.sh  installer.py  pyproject.toml  requirements.txt  test_sample.py  test_server.py  test_startup.py
code-linter-mcp-server/src/code_linter_mcp/: __init__.py  cli.py  config.py  exceptions.py  linting_engine.py  security.py  server.py
code-linter-mcp-server/src/code_linter_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
code-linter-mcp-server/tests/: test_config.py  test_security.py
community-scripts-fork/: README.md
config/: settings.conf
cron/: gitops-schedule
dashboard/: eslint.config.js  jest.config.js  package-lock.json  package.json  postcss.config.js  proxy-server.py  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts
docs/: 3-TIER-DEPLOYMENT.md  ADVANCED-HEALTH-METRICS-PLAN.md  CODE_QUALITY.md  CONFIGURATION.md  CONTAINER_STARTUP_AUDIT.md  DEPLOYMENT-PLANS-SUMMARY.md  GITHUB_PAT_SETUP.md  GITHUB_PROJECT_TEMPLATE.md  IP_CONFLICT_INCIDENT_RESOLVED.md  LXC_SERVICE_DEPLOYMENT_SOP.md  MEMOS_DEPLOYMENT_COMPLETE.md  PHASE1B_IMPLEMENTATION_COMPLETE.md  PHASE1B_TECHNICAL_GUIDE.md  PHASE2-IMPLEMENTATION-PLAN.md  PHASE2-ROADMAP.md  PHASE2-SIMPLE.md  PROXMOX_9_UPGRADE_COMPLETE.md  PROXMOX_HA_AUDIT_COMPLETE.md  PROXMOX_HA_CLUSTER_AUDIT_REPORT.md  PROXMOX_HA_REBOOT_INVESTIGATION.md  PROXMOX_MAINTENANCE_PROCEDURES.md  QUICK_START.md  REPOSITORY_PROJECT_MANAGEMENT_PROCESS.md  SCENES_DOCUMENTATION.md  SECURITY-SCANNING-DEPLOYMENT-PLAN.md  TANDOOR_DEPLOYMENT_COMPLETE.md  UPTIME_KUMA_MONITORS_ADDED.md  VIKUNJA_DEPLOYMENT_COMPLETE.md  WEBSOCKET-DEPLOYMENT-PLAN.md  WINDOWS_SETUP.md  devops-platform-implementation-complete.md  homelab-networking-reference.md  spa-routing.md  v1.0.4-routing-fixes.md  vaultwarden-credential-management.md  (+1 more)
network-mcp-server/: FINAL_STATUS.md  INSTALL.md  INSTALLATION_GUIDE.md  README.md  claude_desktop_config.json  config.json  example_config.json  install.bat  install.sh  installer.py  network_config.json  pyproject.toml  requirements.txt  run_server.py  setup.bat  setup.py  simple_test.py  test_client.py  test_config.json  test_setup.py  test_startup.py
network-mcp-server/src/network_mcp/: __init__.py  cli.py  config.py  exceptions.py  security.py  server.py  smb_fs.py
network-mcp-server/tests/: test_basic.py
proxmox-mcp-server/: .env  INSTALL.md  PRODUCTION_SETUP.md  README.md  config.json  example_config.json  install.bat  install.sh  pyproject.toml  requirements.txt  run_server.py  setup_production_credentials.sh  test_api_connectivity.py  test_mcp_functionality.py  test_startup.py
proxmox-mcp-server/src/proxmox_mcp/: __init__.py  config.py  exceptions.py  proxmox_client.py
proxmox-mcp-server/src/proxmox_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
proxmox-mcp-server/tests/: test_config.py  test_security.py
(+3120 files in other folders)
